[package]
name = "tic-tac-toe"
version = "0.1.0"
authors = ["CSy-n <alpha.phonecian@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
rand = "0.7.2"
gameboard = "0.1.0"
termion = "1.5.4"
